--- a/deployment.yaml
+++ b/deployment.yaml
@@ -1,19 +1,19 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: register-app-deployment
+  name: register-app-ci
 spec:
   replicas: 2
   selector:
     matchLabels:
-      app: register-app
+      app: register-app-ci
   template:
     metadata:
       labels:
-        app: register-app
+        app: register-app-ci
     spec:
       containers:
-        - name: register-app
+        - name: register-app-ci
           image: mihirmodi2561/register-app-ci:1.0.0-15
           resources:
             limits:
